feat：use Request to redirect
