# src/controllers/item.ts
@@ -10,16 +10,18 @@ import {
   Route,
   SuccessResponse,
   Tags,
+  Response,
+  Request
 } from 'tsoa';
 
-import { Request, Response } from 'express';
+import { Request as ExRequest, Response as ExResponse } from 'express';
 import { WriteError } from 'mongodb';
 import { Item } from '../models/Item';
 
-import { Item as IItem, ItemList } from '../types/item';
+import { Item as IItem, ItemList, AddItem } from '../types/item';
 import { CommonResponse } from '../types/common';
 
-export const getItem = (req: Request, res: Response) => {
+export const getItem = (req: ExRequest, res: ExResponse) => {
   Item.find()
     .then((items) => {
       res.render('index', { items });
@@ -27,15 +29,16 @@ export const getItem = (req: Request, res: Response) => {
     .catch((err: WriteError) => {
       res.status(404).json({ msg: 'No items found' });
     });
-}
+};
 
-export const addItem = (req: Request, res: Response) => {
+export const addItem = (req: ExRequest, res: ExResponse) => {
   const newItem = new Item({
-    name: req.body.name
+    name: req.body.name,
+    platform: req.body.platform
   });
 
   newItem.save().then((item) => res.redirect('/'));
-}
+};
 
 @Tags('Item 商品模块')
 @Route('item')
@@ -60,14 +63,14 @@ export class ItemController extends Controller {
       };
     } catch (error) {}
   }
-  
+
   /**
    * 获取商品详情
    * @param id 商品ID
    */
   @Get('detail')
   public async getDetail(
-    @Query() id?: number | string,
+    @Query() id?: number | string
   ): Promise<CommonResponse<any>> {
     try {
       const items = await Item.find();
@@ -78,5 +81,17 @@ export class ItemController extends Controller {
         data: items[0],
       };
     } catch (error) {}
+  }
+
+  @Post('new')
+  @SuccessResponse(302, 'Redirect')
+  public async addItem(@Request() req: ExRequest,  @Body() requestBody: AddItem) {
+    try {
+      const newItem = new Item(requestBody);
+      const item = await newItem.save();
+      console.info('==item==', item)
+    } finally {
+      req.res.redirect('/');
+    }
   }
 }
